# fledge-filter-change

./: .gitignore  CMakeLists.txt  Description  Package  README.rst  change_filter.cpp  plugin.cpp
docs/: index.rst  keywords
include/: change_filter.h
tests/: CMakeLists.txt  README.rst  main.cpp  test_change.cpp  test_info.cpp
